custom options * implemented rules for an option file, to manage most of the edge cases without touching the code   * platform icon removal   * game ignore list (based on title)   * game renaming   * game merging (for clones/duplicates)   * custom sorting title (useful for fast series realignment)   * custom sorting * `delist` now does just that, instead of literals evaluation * moved most data cleaning nearer to the source * title sorting now takes custom lists into consideration. Guaranteed performance hit, but no way out (that I found) * fix: `dlcs` are now added to the output

--- a/templates/style.scss
+++ b/templates/style.scss
@@ -54,7 +54,7 @@ svg.platforms {
 #controls {
     display: none;
     position: sticky;
-    z-index: 2;
+    z-index: 10;
     top: 1rem;
     text-align: center;
     input {
@@ -76,7 +76,7 @@ svg.platforms {
 }
 
 #overlay {
-    z-index: 1;
+    z-index: 5;
     position: fixed;
     top: 0;
     left: 0;
